--- a/client/src/style/base/typography.scss
+++ b/client/src/style/base/typography.scss
@@ -1,43 +1,83 @@
-.text {
+@mixin text {
   font-weight: 300;
+}
+
+@mixin text__12 {
+  font-size: 1.2rem;
+  line-height: 1.6rem;
+  letter-spacing: 0.2px;
+}
+
+@mixin text__14 {
+  font-size: 1.4rem;
+  line-height: 2rem;
+  letter-spacing: 0.2px;
+}
+
+@mixin text__16 {
+  font-size: 1.6rem;
+  line-height: 2.4rem;
+  letter-spacing: 0.2px;
+}
+
+@mixin text__20 {
+  font-size: 2rem;
+  line-height: 3.2rem;
+  letter-spacing: -0.2px;
+}
+
+@mixin text__24 {
+  font-size: 2.4rem;
+  line-height: 3.2rem;
+  letter-spacing: -0.2px;
+}
+
+@mixin text__32 {
+  font-size: 3.2rem;
+  line-height: 4rem;
+  letter-spacing: -0.2px;
+}
+
+@mixin text__bold {
+  font-weight: 600;
+}
+
+@mixin text__center {
+  text-align: center;
+}
+
+.text {
+  @include text;
 
   &__12 {
-    font-size: 1.2rem;
-    line-height: 1.6rem;
-    letter-spacing: 0.2px;
+    @include text__12;
   }
 
   &__14 {
-    font-size: 1.4rem;
-    line-height: 2rem;
-    letter-spacing: 0.2px;
+    @include text__14;
   }
 
   &__16 {
-    font-size: 1.6rem;
-    line-height: 2.4rem;
-    letter-spacing: 0.2px;
+    @include text__16;
   }
 
   &__20 {
-    font-size: 2rem;
-    line-height: 3.2rem;
-    letter-spacing: -0.2px;
+    @include text__20;
   }
 
   &__24 {
-    font-size: 2.4rem;
-    line-height: 3.2rem;
-    letter-spacing: -0.2px;
+    @include text__24;
   }
 
   &__32 {
-    font-size: 3.2rem;
-    line-height: 4rem;
-    letter-spacing: -0.2px;
+    @include text__32;
   }
 
   &__bold {
-    font-weight: 600;
+    @include text__bold;
+  }
+
+  &__center {
+    @include text__center;
   }
 }
