--- a/client/src/style/components/button.scss
+++ b/client/src/style/components/button.scss
@@ -2,31 +2,59 @@
   @include text;
   @include text__12;
 
-  height: size(10);
-  width: fit-content;
-  border: none;
-  background-color: $purple-600;
-  color: $purple-050;
+  &__primary {
+    height: size(10);
+    width: fit-content;
+    border: none;
+    background-color: $purple-600;
+    color: $purple-050;
 
-  padding-left: size(4);
-  padding-right: size(4);
-  border-radius: size(1.5);
-  user-select: none;
-  outline: none;
-
-  cursor: pointer;
-  text-transform: uppercase;
-
-  &:hover {
-    background-color: $purple-700;
-  }
-
-  &:focus {
-    background-color: $purple-500;
+    padding-left: size(4);
+    padding-right: size(4);
+    border-radius: size(1.5);
+    user-select: none;
     outline: none;
+
+    cursor: pointer;
+    text-transform: uppercase;
+
+    &:hover {
+      background-color: $purple-700;
+    }
+
+    &:focus {
+      background-color: $purple-500;
+      outline: none;
+    }
+
+    &:active {
+      transform: scale(95%);
+    }
   }
 
-  &:active {
-    transform: scale(95%);
+  &__link {
+    width: fit-content;
+    border: none;
+    color: $purple-600;
+    background: transparent;
+
+    user-select: none;
+    outline: none;
+
+    cursor: pointer;
+    text-transform: uppercase;
+
+    &:hover {
+      color: $purple-700;
+    }
+
+    &:focus {
+      color: $purple-500;
+      outline: none;
+    }
+
+    &:active {
+      transform: scale(95%);
+    }
   }
 }
