--- a/client/src/components/button.scss
+++ b/client/src/components/button.scss
@@ -1,29 +1,53 @@
+@mixin button {
+  height: size(10);
+  width: fit-content;
+  border: none;
+  background-color: $purple-600;
+  color: $purple-050;
+
+  padding-left: size(4);
+  padding-right: size(4);
+  border-radius: size(1.5);
+  user-select: none;
+  outline: none;
+
+  cursor: pointer;
+  text-transform: uppercase;
+
+  &:hover {
+    background-color: $purple-700;
+  }
+
+  &:focus {
+    background-color: $purple-500;
+    outline: none;
+  }
+
+  &:active {
+    transform: scale(95%);
+  }
+}
+
 .button {
   @include text;
   @include text__12;
 
   &__primary {
-    height: size(10);
-    width: fit-content;
-    border: none;
-    background-color: $purple-600;
-    color: $purple-050;
+    @include button();
+  }
 
-    padding-left: size(4);
-    padding-right: size(4);
-    border-radius: size(1.5);
-    user-select: none;
-    outline: none;
+  &__secondary {
+    @include button();
 
-    cursor: pointer;
-    text-transform: uppercase;
+    background-color: $purple-050;
+    color: $purple-600;
 
     &:hover {
-      background-color: $purple-700;
+      background-color: $purple-100;
     }
 
     &:focus {
-      background-color: $purple-500;
+      background-color: $purple-100;
       outline: none;
     }
 
