--- a/client/src/components/form.scss
+++ b/client/src/components/form.scss
@@ -38,6 +38,44 @@
     }
   }
 
+  &-textarea {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: size(4);
+    width: 100%;
+
+    :focus-within {
+      > label {
+        color: $warm-grey-300;
+      }
+    }
+
+    > label {
+      @include text;
+      @include text__12;
+      @include text__bold;
+
+      margin-bottom: size(1);
+    }
+
+    > textarea {
+      @include text;
+      @include text__14;
+
+      padding-left: size(1);
+      padding-right: size(1);
+
+      border: 1px solid $warm-grey-200;
+      outline: none;
+
+      &:focus,
+      &:hover {
+        border-color: $purple-600;
+        outline: none;
+      }
+    }
+  }
+
   &-action {
     text-align: center;
   }
