client: add/edit books

--- a/client/src/components/form.scss
+++ b/client/src/components/form.scss
@@ -5,12 +5,6 @@
     margin-bottom: size(4);
     width: 100%;
 
-    :focus-within {
-      > label {
-        color: $warm-grey-300;
-      }
-    }
-
     > label {
       @include text;
       @include text__12;
@@ -38,17 +32,86 @@
     }
   }
 
-  &-textarea {
+  &-file {
     display: flex;
     flex-direction: column;
     margin-bottom: size(4);
     width: 100%;
 
-    :focus-within {
-      > label {
-        color: $warm-grey-300;
+    > label {
+      @include text;
+      @include text__12;
+      @include text__bold;
+
+      margin-bottom: size(1);
+    }
+
+    > div {
+      @include text;
+      @include text__14;
+
+      background-color: white;
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+
+      padding-left: size(1);
+      padding-right: size(1);
+      height: size(8);
+
+      border: 1px solid $warm-grey-200;
+      outline: none;
+
+      &:focus,
+      &:hover {
+        border-color: $purple-600;
+        outline: none;
       }
     }
+
+    > input {
+      display: none;
+    }
+  }
+
+  &-dropdown {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: size(4);
+    width: 100%;
+
+    > label {
+      @include text;
+      @include text__12;
+      @include text__bold;
+
+      margin-bottom: size(1);
+    }
+
+    > select {
+      @include text;
+      @include text__14;
+
+      padding-left: size(1);
+      padding-right: size(1);
+      height: size(8);
+
+      border: 1px solid $warm-grey-200;
+      outline: none;
+
+      &:focus,
+      &:hover {
+        border-color: $purple-600;
+        outline: none;
+      }
+    }
+  }
+
+  &-textarea {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: size(4);
+    width: 100%;
 
     > label {
       @include text;
