--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -6,3 +6,4 @@
 @import './pages/books.scss';
 @import './pages/book.scss';
 @import './pages/books_manager.scss';
+@import './pages/book_form.scss';
