--- a/client/src/pages/auth.scss
+++ b/client/src/pages/auth.scss
@@ -9,6 +9,10 @@
   background-position: 0;
   background-size: cover;
 
+  @include respond(tab-portrait) {
+    justify-content: center;
+  }
+
   &-container {
     background-color: $warm-grey-050;
     border-radius: size(1);
@@ -20,6 +24,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    @include respond(tab-portrait) {
+      margin-left: size(10);
+      margin-right: size(10);
+    }
 
     &-logo {
       width: size(20);
