[new] about us - text + img

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -7,3 +7,4 @@
 @import './pages/book.scss';
 @import './pages/books_manager.scss';
 @import './pages/book_form.scss';
+@import './pages/about.scss';
