--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -8,3 +8,4 @@
 @import './pages/books_manager.scss';
 @import './pages/book_form.scss';
 @import './pages/about.scss';
+@import './pages/help.scss';
