--- a/client/src/pages/book.scss
+++ b/client/src/pages/book.scss
@@ -2,6 +2,10 @@
   display: flex;
   justify-content: flex-start;
 
+  @include respond(tab-portrait) {
+    flex-direction: column;
+  }
+
   &-clickable {
     color: $purple-600;
     cursor: pointer;
@@ -11,6 +15,10 @@
     flex-basis: size(60);
     flex-shrink: 0;
     margin-right: size(10);
+
+    @include respond(tab-portrait) {
+      margin-right: 0;
+    }
   }
 
   &-info {
@@ -27,11 +35,37 @@
 
   &-detail {
     flex-basis: 30%;
+
+    @include respond(tab-portrait) {
+      flex-basis: 50%;
+    }
+
+    @include respond(phone) {
+      flex-basis: 100%;
+    }
   }
 
   &-related {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
+
+    > div {
+      flex-basis: 20%;
+      margin-bottom: size(6);
+
+      @include respond(tab-landscape) {
+        flex-basis: 25%;
+      }
+
+      @include respond(tab-portrait) {
+        flex-basis: 40%;
+      }
+
+      @include respond(phone) {
+        flex-basis: 100%;
+      }
+    }
   }
 
   &-reviews {
@@ -47,6 +81,25 @@
       width: 100%;
       margin-top: size(1);
       margin-bottom: size(1);
+    }
+  }
+
+  &-title {
+    &-desktop {
+      display: block;
+
+      @include respond(tab-portrait) {
+        display: none;
+      }
+    }
+
+    &-mobile {
+      display: none;
+      margin-bottom: size(8);
+
+      @include respond(tab-portrait) {
+        display: block;
+      }
     }
   }
 }
