--- a/client/src/pages/help.scss
+++ b/client/src/pages/help.scss
@@ -4,14 +4,6 @@
     flex-direction: column;
     align-items: start;
 
-    &-message {
-        margin-bottom: 0;
-
-        @include text;
-        @include text__32;
-        @include text__bold;
-    }
-
     &-container {
         display: flex;
         justify-content: center;
@@ -22,7 +14,7 @@
         &-questions {
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: start;
             width: 70%;
             align-items: start;
 
