--- a/client/src/pages/help.scss
+++ b/client/src/pages/help.scss
@@ -3,20 +3,39 @@
     justify-content: center;
     flex-direction: column;
     align-items: start;
-
     &-container {
         display: flex;
-        justify-content: center;
+        justify-content: flex-start;
         flex-direction: row;
         width: 100%;
         margin: size(20) size(20) size(20) size(0);
+        align-items: start;
 
+        @include respond(phone) {
+            flex-direction: column;
+            align-items: start;
+        }
+
+        @include respond(tab-portrait) {
+            flex-direction: column;
+            align-items: start;
+        }
+        
         &-questions {
             display: flex;
             flex-direction: column;
             justify-content: start;
             width: 70%;
             align-items: start;
+
+
+            @include respond(phone) {
+                width: 100%;
+            }
+    
+            @include respond(tab-portrait) {
+                width: 100%;
+            }
 
             &-list {
                 width: 100%;
@@ -29,6 +48,17 @@
             justify-content: center;
             width: 30%;
             align-items: center;
+
+            @include respond(phone) {
+                width: 100%;
+                order: -1;
+                margin-bottom: size(10);
+            }
+    
+            @include respond(tab-portrait) {
+                width: 100%;
+                order: -1;
+            }
         }
     }
 }
