--- a/client/src/pages/help.scss
+++ b/client/src/pages/help.scss
@@ -1,76 +1,74 @@
 .help {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: start;
+  &-container {
     display: flex;
-    justify-content: center;
-    flex-direction: column;
+    justify-content: flex-start;
+    flex-direction: row;
+    width: 100%;
+    margin: size(20) size(20) size(20) size(0);
     align-items: start;
-    &-container {
-        display: flex;
-        justify-content: flex-start;
-        flex-direction: row;
-        width: 100%;
-        margin: size(20) size(20) size(20) size(0);
-        align-items: start;
 
-        @include respond(phone) {
-            flex-direction: column;
-            align-items: start;
-        }
-
-        @include respond(tab-portrait) {
-            flex-direction: column;
-            align-items: start;
-        }
-        
-        &-questions {
-            display: flex;
-            flex-direction: column;
-            justify-content: start;
-            width: 70%;
-            align-items: start;
-
-
-            @include respond(phone) {
-                width: 100%;
-            }
-    
-            @include respond(tab-portrait) {
-                width: 100%;
-            }
-
-            &-list {
-                width: 100%;
-            }
-        }
-
-        &-panel {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            width: 30%;
-            align-items: center;
-            position: sticky;
-            top:40%;
-
-            @include respond(phone) {
-                width: 100%;
-                margin-top: size(10);
-            }
-    
-            @include respond(tab-portrait) {
-                width: 100%;
-                margin-top: size(10);
-            }
-
-            .action{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-            }
-
-            .form
-            {
-                width: 70%;
-            }
-        }
+    @include respond(phone) {
+      flex-direction: column;
+      align-items: start;
     }
+
+    @include respond(tab-portrait) {
+      flex-direction: column;
+      align-items: start;
+    }
+
+    &-questions {
+      display: flex;
+      flex-direction: column;
+      justify-content: start;
+      width: 70%;
+      align-items: start;
+
+      @include respond(phone) {
+        width: 100%;
+      }
+
+      @include respond(tab-portrait) {
+        width: 100%;
+      }
+
+      &-list {
+        width: 100%;
+      }
+    }
+
+    &-panel {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      width: 30%;
+      align-items: center;
+      position: sticky;
+      top: 40%;
+
+      @include respond(phone) {
+        width: 100%;
+        margin-top: size(10);
+      }
+
+      @include respond(tab-portrait) {
+        width: 100%;
+        margin-top: size(10);
+      }
+
+      .action {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .form {
+        width: 70%;
+      }
+    }
+  }
 }
