nav-bar added + a more readable aproach for tablet mode

--- a/client/src/pages/about.scss
+++ b/client/src/pages/about.scss
@@ -12,6 +12,10 @@
   &-container {
     padding: size(20);
     max-width: size(300);
+
+    @include respond(tab-portrait) {
+      padding: 0;
+    }
   }
 
   .text__32 {
