--- a/client/src/pages/reviews.scss
+++ b/client/src/pages/reviews.scss
@@ -1,33 +1,26 @@
 .reviews {
   display: flex;
-  justify-content: space-between;
+  justify-content: start;
   flex-wrap: wrap;
   width: 100%;
 
-  .column {
-    width: calc(50% - size(1.5));
-  }
-  .review{
+  .review {
+    flex-grow: 1;
+    width: 45%;
+    margin-right: size(12);
     margin-bottom: size(6);
-  }
-  div {
-    flex-basis: 48%;
-    margin-right: size(3);
-    margin-bottom: size(6);
-  
+
     @include respond(tab-landscape) {
-      flex-basis: 30%;
+      width: 30%;
     }
-  
+
     @include respond(tab-portrait) {
-      flex-basis: 48%;
+      width: 48%;
     }
-  
+
     @include respond(phone) {
-      flex-basis: 100%;
+      width: 100%;
       margin-right: 0;
     }
   }
-  
-  
 }
