--- a/client/src/pages/reviews.scss
+++ b/client/src/pages/reviews.scss
@@ -6,20 +6,20 @@
 
   .review {
     flex-grow: 1;
-    width: 45%;
-    margin-right: size(12);
+    flex-basis: 30%;
+    margin-right: size(16);
     margin-bottom: size(6);
 
     @include respond(tab-landscape) {
-      width: 30%;
+      flex-basis: 25%;
     }
 
     @include respond(tab-portrait) {
-      width: 48%;
+      flex-basis: 40%;
     }
 
     @include respond(phone) {
-      width: 100%;
+      flex-basis: 100%;
       margin-right: 0;
     }
   }
