help_question page first iteration

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -11,3 +11,4 @@
 @import './pages/profile.scss';
 @import './pages/about.scss';
 @import './pages/help.scss';
+@import './pages/help_question.scss';
