--- a/client/src/pages/help.scss
+++ b/client/src/pages/help.scss
@@ -11,11 +11,6 @@
     margin: size(20) size(20) size(20) size(0);
     align-items: start;
 
-    @include respond(phone) {
-      flex-direction: column;
-      align-items: start;
-    }
-
     @include respond(tab-portrait) {
       flex-direction: column;
       align-items: start;
@@ -37,7 +32,7 @@
       }
     }
 
-    &-panel {
+    &-form {
       display: flex;
       flex-direction: column;
       justify-content: center;
