--- a/client/src/pages/help_question.scss
+++ b/client/src/pages/help_question.scss
@@ -1,7 +1,7 @@
 .help_question {
   display: flex;
-  justify-content: center;
-  flex-direction: row;
+  justify-content: start;
+  flex-direction: column;
   align-items: start;
 
   &-specifications {
@@ -11,6 +11,10 @@
     width: 60%;
     align-items: start;
 
+    @include respond(tab-portrait) {
+      width: 100%;
+    }
+
     &-panel {
       display: flex;
       flex-direction: row;
@@ -18,6 +22,14 @@
       width: 100%;
       margin-top: size(4);
       margin-left: size(4);
+
+      @include respond(tab-portrait) {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        margin-left: 0;
+      }
 
       > button {
         background-color: Transparent;
@@ -27,40 +39,59 @@
         overflow: hidden;
       }
     }
+  }
+  &-container {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: start;
+    width: 100%;
+
+    @include respond(tab-portrait) {
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+    }
 
     &-answers {
       display: flex;
       flex-direction: column;
       justify-content: start;
-      width: 100%;
+      width: 60%;
       align-items: start;
       margin-left: size(4);
       margin-top: size(16);
-    }
-  }
 
-  &-form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 40%;
-    align-items: center;
-    position: sticky;
-    top: 40%;
-
-    @include respond(tab-portrait) {
-      width: 100%;
-      margin-top: size(10);
+      @include respond(tab-portrait) {
+        width: 100%;
+      }
     }
 
-    .action {
+    &-form {
       display: flex;
+      flex-direction: column;
       justify-content: center;
+      width: 40%;
       align-items: center;
-    }
+      position: sticky;
+      top: 40%;
 
-    .form {
-      width: 80%;
+      @include respond(tab-portrait) {
+        width: 100%;
+        margin-top: size(10);
+        position: static;
+        order: -1;
+      }
+
+      .action {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .form {
+        width: 80%;
+      }
     }
   }
 }
