form goes a litlle bit higher

--- a/client/src/pages/help_question.scss
+++ b/client/src/pages/help_question.scss
@@ -75,9 +75,9 @@
       width: 40%;
       align-items: center;
       position: sticky;
-      top: 40%;
+      top: 30%;
 
-      @include respond(tab-portrait) {
+      @include respond(tab-potrait) {
         width: 100%;
         margin-top: size(10);
         position: static;
