chore: add scholarly doc

--- a/client/src/pages/home.scss
+++ b/client/src/pages/home.scss
@@ -6,6 +6,11 @@
   @include respond(phone) {
     flex-direction: column;
   }
+
+  &-analytics {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .stats {
