--- a/client/src/components/button.scss
+++ b/client/src/components/button.scss
@@ -64,6 +64,15 @@
     width: size(8);
   }
 
+  &__icon-large {
+    @include button();
+    @include text__16();
+
+    padding: 0;
+    height: size(10);
+    width: size(10);
+  }
+
   &__red {
     background-color: $red-vivid-600;
 
