wip(login): handle login form

--- a/client/styles/components/button.scss
+++ b/client/styles/components/button.scss
@@ -34,6 +34,16 @@
 
   &__primary {
     @include button();
+
+    &:disabled {
+      background-color: $warm-grey-200;
+      color: $warm-grey-900;
+
+      cursor: not-allowed;
+      &:active {
+        transform: scale(100%);
+      }
+    }
   }
 
   &__secondary {
