--- a/server/templates/books_genre.html
+++ b/server/templates/books_genre.html
@@ -32,44 +32,7 @@
         <input type="text" id="search" placeholder="Search" />
         <i class="fa fa-search" aria-hidden="true"></i>
       </div>
-      <div class="side-links">
-        <button class="side-link" onclick="goTo('./home.html')">
-          <i class="fa fa-home" aria-hidden="true"></i>
-          Home
-        </button>
-        <button
-          class="side-link side-link__active"
-          onclick="goTo('./books.html')"
-        >
-          <i class="fa fa-book" aria-hidden="true"></i>
-          Books
-        </button>
-        <button class="side-link" onclick="goTo('./reviews.html')">
-          <i class="fa fa-comment" aria-hidden="true"></i>
-          Reviews
-        </button>
-        <button class="side-link" onclick="goTo('./books_manager.html')">
-          <i class="fa fa-table" aria-hidden="true"></i>
-          Books Manager
-        </button>
-        <button class="side-link" onclick="goTo('./about.html')">
-          <i class="fa fa-info-circle" aria-hidden="true"></i>
-          About
-        </button>
-        <button class="side-link" onclick="goTo('./help.html')">
-          <i class="fa fa-question-circle" aria-hidden="true"></i>
-          Help
-        </button>
-        <div class="mt-3"></div>
-        <button class="side-link" onClick="goTo('./login.html')">
-          <i class="fa fa-user" aria-hidden="true"></i>
-          Login
-        </button>
-        <button class="side-link" onClick="goTo('./register.html')">
-          <i class="fa fa-user-plus" aria-hidden="true"></i>
-          Register
-        </button>
-      </div>
+      <div class="side-links"></div>
       <div class="side-footer">
         <div class="text text__14">boo @ 2023</div>
       </div>
