feat(client): implement book manager

--- a/client/styles/components/button.scss
+++ b/client/styles/components/button.scss
@@ -85,6 +85,7 @@
 
   &__red {
     background-color: $red-vivid-600;
+    color: $warm-grey-050;
 
     &:hover {
       background-color: $red-vivid-700;
