--- a/client/styles/components/modal.scss
+++ b/client/styles/components/modal.scss
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   background-color: rgba(0, 0, 0, 0.8);
   z-index: 10000;
 
