--- a/client/styles/pages/book.scss
+++ b/client/styles/pages/book.scss
@@ -47,12 +47,12 @@
 
   &-related {
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
 
     > div {
       flex-basis: 20%;
       margin-bottom: size(6);
+      margin-right: size(2);
 
       @include respond(tab-landscape) {
         flex-basis: 25%;
@@ -65,6 +65,10 @@
       @include respond(phone) {
         flex-basis: 100%;
       }
+    }
+
+    &::last-child {
+      margin-right: size(0);
     }
   }
 
