--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -6,6 +6,7 @@
 @import './pages/books.scss';
 @import './pages/book.scss';
 @import './pages/books_manager.scss';
+@import './pages/users_manager.scss';
 @import './pages/home.scss';
 @import './pages/book_form.scss';
 @import './pages/profile.scss';
