feat(client): add help

--- a/client/styles/pages/help_question.scss
+++ b/client/styles/pages/help_question.scss
@@ -62,6 +62,10 @@
       margin-left: size(4);
       margin-top: size(16);
 
+      > div {
+        width: 100%;
+      }
+
       @include respond(tab-portrait) {
         width: 100%;
         margin-left: 0;
